--- a/todo.txt
+++ b/todo.txt
@@ -5,6 +5,7 @@ AFTER DEPLOY
 - create a script that: 1) creates cypress.admin@email.com & cypress_user@email.com, 2) deletes all trips created by cypress_user
 - create script that populates trips with sample data
 - add some more tests
+- add figma file
 - see other ppl's profile is not implemented
 - delete trips older than 2 weeks on a biweekly basis
 
